k8s/rundeck/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck
  namespace: profarma-poc
  labels:
    app: rundeck
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rundeck
  template:
    metadata:
      labels:
        app: rundeck
    spec:
      containers:
        - name: rundeck
          image: rundeck/rundeck:5.20.1
          ports:
            - containerPort: 4440
              name: http
          volumeMounts:
            - name: data
              mountPath: /home/rundeck/server/data
          livenessProbe:
            httpGet:
              path: /
              port: 4440
            initialDelaySeconds: 180
            periodSeconds: 60
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 4440
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 10
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rundeck-data
