k8s/rundeck/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rundeck
  namespace: profarma-poc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: rundeck.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rundeck
                port:
                  number: 4440
